[tool.poetry]
name = "rollbase"
version = "0.1.0"
description = ""
authors = ["sajjadali196 <sajjad196fsd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = "^2.0.36"
bcrypt = "^4.2.1"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
